--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.7.0",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
@@ -13,6 +15,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react_ujs": "^2.6.0",
+    "styled-components": "^4.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
