--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@rails/webpacker": "^4.2.0",
     "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "html-react-parser": "^0.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react_ujs": "^2.6.0",
     "styled-components": "^4.4.1",
