--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "html-react-parser": "^0.10.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-data-table-component": "^3.10.2",
     "react-dom": "^16.12.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react_ujs": "^2.6.0",
     "styled-components": "^4.4.1",
+    "sweetalert2": "^9.3.16",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
