--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "html-react-parser": "^0.10.0",
+    "immutability-helper": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-data-table-component": "^3.10.2",
+    "react-dnd": "^9.4.0",
+    "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.12.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
